Adding structure and images

--- a/sass/base/variables.scss
+++ b/sass/base/variables.scss
@@ -8,7 +8,7 @@ $pfontweight: 100;
 
 // header font styles
 
-$hfont: "Coromont Garamond";
+$hfont: "Cormorant Garamond";
 $hfontcolor: #353535;
 $hfontweight: 100;
 $h1fontsize: 4em;
