--- a/sass/components/header.scss
+++ b/sass/components/header.scss
@@ -23,3 +23,11 @@ header {
     list-style-type: none;
   }
 }
+
+nav {
+  height: 100px;
+  max-width: 1200px;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 50px;
+}
