--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,7 +1,8 @@
 @import "./base/variables.scss";
 @import "./components/header.scss";
-@import "./components/footer.scss";
+@import "./components/hero.scss";
 @import "./components/content.scss";
+@import "./components/footer.scss";
 
 * {
   margin: 0;
