--- a/sass/components/content.scss
+++ b/sass/components/content.scss
@@ -29,13 +29,16 @@
 .row-right {
   display: flex;
   justify-content: flex-end;
+  width: 100%;
+  height: 100vh;
   .content-right {
     max-width: 40%;
     margin: 150px;
     display: flex;
     flex-flow: column wrap;
-    justify-content: left;
-    align-items: left;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
 
     h1 {
       font-family: $hfont;
@@ -53,9 +56,19 @@
 }
 
 .img1 {
-  background-image: url("../../assets/tarantula-hawk-on-milkweed.jpg");
-  height: 100vh;
-  background-size: cover;
-  background-position: center;
+  background-image: url("../assets/tarantula-hawk-on-milkweed.jpg");
+  height: 100%;
+  width: 50%;
   background-attachment: fixed;
+  background-size: 70%;
+  background-repeat: no-repeat;
+  background-position: 850px 0px;
+}
+
+@media (min-width: 1920px) {
+  .img1 {
+    background-size: 70%;
+    background-repeat: no-repeat;
+    background-position: 1050px -250px;
+  }
 }
