--- a/sass/components/hero.scss
+++ b/sass/components/hero.scss
@@ -4,6 +4,7 @@
   width: 100vw;
   height: 70vh;
   display: flex;
+  margin-bottom: 150px;
   background-position: center;
   background-attachment: fixed;
   background-size: cover;
